--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
     <div id="loadingOverlay" class="loading-overlay">
       <div class="loader"></div>
     </div>
-    <script src="./script/main.js"></script>
+    <script type="module" src="./script/main.js"></script>
   </body>
 </html>
