--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style/style.scss">
     <title>Links Pedro</title>
-    <link 
-  href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" 
-  rel="stylesheet"  type='text/css'>
+    <script src="https://kit.fontawesome.com/0476c8e296.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
