--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <h1>Links</h1>
           <div class="linkContainer">
             <a href="https://github.com/pedromoitinho"><i class="fa fa-github"></i></a>
-            <a href="https://www.instagram.com/pedr0moitinho/profilecard/?igsh=MTgwNWlsamt5emFkZg=="><i class="fa fa-instagram"></i></a>
+            <a href="https://www.instagram.com/pedr0moitinho/"><i class="fa fa-instagram"></i></a>
             <a href="https://www.linkedin.com/in/pedro-moitinho-9a246829a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa fa-linkedin"></i></a>
           </div>
       </div>
