--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a href="https://github.com/pedromoitinho"><i class="fa fa-github"></i></a>
             <a href="https://www.instagram.com/pedr0moitinho/"><i class="fa fa-instagram"></i></a>
             <a href="https://www.linkedin.com/in/pedro-moitinho-9a246829a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa fa-linkedin"></i></a>
+            <a href="https://portfolio-pedromoitinhos-projects.vercel.app/"><h3>Portfólio</h3></a>
           </div>
       </div>
     </div>
